--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <!-- Wedding Image -->
   <div class="wedding-photo">
-    <img src="images/monisha-gokul.jpg" alt="Monisha & Gokul" />
+    <img src="monisha-gokul.jpg" alt="Monisha & Gokul" />
   </div>
 
   <!-- Countdown -->
